--- a/app/src/main/res/layout/activity_history.xml
+++ b/app/src/main/res/layout/activity_history.xml
@@ -68,7 +68,7 @@
 
                 <androidx.appcompat.widget.AppCompatSpinner
                     android:id="@+id/sp_type"
-                    android:layout_width="100dp"
+                    android:layout_width="130dp"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="10dp"
                     android:background="@drawable/spinner_bg"
@@ -94,13 +94,31 @@
                 app:layout_constraintTop_toTopOf="parent" />
         </androidx.constraintlayout.widget.ConstraintLayout>
 
+        <LinearLayout
+            android:id="@+id/ll_no_record_container"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:gravity="center"
+            android:orientation="horizontal">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/no_record_found"
+                android:textAlignment="center"
+                android:textColor="@color/gray"
+                android:textSize="20sp"
+                android:textStyle="italic" />
+        </LinearLayout>
+
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/rv_history"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:clipChildren="false"
             android:clipToPadding="false"
-            android:orientation="vertical" />
+            android:orientation="vertical"
+            android:visibility="gone" />
     </LinearLayout>
 
 </LinearLayout>
